Fix z-index of burger menu on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -54,6 +54,7 @@
         border: 1px solid $grey-color-light;
         border-radius: 5px;
         text-align: right;
+        z-index: 1000;
 
         .menu-icon {
             display: block;
